# mp-dsp-python

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  conventional-commits.yml  publish.yml  regression.yml  release.yml
applications/: signal.py  sine_wave.py
docs/: api_reference.md  dashboard.md  publishing.md
notebooks/: 02_iir_precision.ipynb  03_fir_and_windows.ipynb  04_interactive_precision.ipynb  05_conditioning.ipynb  06_estimation.ipynb  07_image_processing.ipynb  08_sensor_noise.ipynb  09_numerical_analysis.ipynb
python/mpdsp/: __init__.py  analysis.py  estimation.py  filters.py  image.py  io.py  plotting.py
scripts/: build_api_ref.py  plot_dashboard.py  plot_heatmap.py  plot_pole_zero.py  plot_precision.py
src/: BINDING_PATTERNS.md  _binding_helpers.hpp  acquisition_bindings.cpp  analysis_bindings.cpp  bindings.cpp  conditioning_bindings.cpp  estimation_bindings.cpp  filter_bindings.cpp  image_bindings.cpp  quantization_bindings.cpp  signal_bindings.cpp  spectral_bindings.cpp  types.hpp  types_bindings.cpp
tests/: test_acquisition.py  test_analysis.py  test_conditioning.py  test_estimation.py  test_filters.py  test_image.py  test_io.py  test_quantization.py  test_scripts.py  test_signals.py  test_spectral.py  test_types.py  test_version.py
