[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mpdsp"
version = "0.1.0"
description = "Python integration layer for the mixed-precision DSP library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Stillwater Supercomputing, Inc." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
notebook = ["matplotlib>=3.5", "jupyter", "ipykernel"]
dashboard = ["matplotlib>=3.5", "streamlit>=1.20"]
dev = ["pytest", "matplotlib>=3.5", "jupyter", "ipykernel"]
all = ["matplotlib>=3.5", "jupyter", "ipykernel", "streamlit>=1.20", "pytest"]

[project.urls]
Homepage = "https://github.com/stillwater-sc/mp-dsp-python"
Repository = "https://github.com/stillwater-sc/mp-dsp-python"
Issues = "https://github.com/stillwater-sc/mp-dsp-python/issues"
Documentation = "https://github.com/stillwater-sc/mixed-precision-dsp"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/mpdsp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
