[build-system]
# Regex version metadata provider requires scikit-build-core >= 0.10.
requires = ["scikit-build-core>=0.10", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mpdsp"
# Version is sourced from CMakeLists.txt via scikit-build-core's regex
# provider (see [tool.scikit-build.metadata.version] below). We track
# mixed-precision-dsp in lockstep; Python-only patches use PEP 440
# post-releases. Do not hardcode the version here.
dynamic = ["version"]
description = "Python integration layer for the mixed-precision DSP library"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Stillwater Supercomputing, Inc." },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.4",
]

[project.optional-dependencies]
# seaborn drives the heatmap plots in scripts/plot_heatmap.py; plain
# matplotlib still handles bar charts, scatter, and the response/error
# plots in scripts/plot_precision.py.
plot = ["matplotlib>=3.5", "seaborn>=0.12"]
notebook = ["matplotlib>=3.5", "seaborn>=0.12", "jupyter", "ipykernel"]
dashboard = ["matplotlib>=3.5", "seaborn>=0.12", "streamlit>=1.20"]
dev = ["pytest", "matplotlib>=3.5", "seaborn>=0.12", "jupyter", "ipykernel"]
all = ["matplotlib>=3.5", "seaborn>=0.12", "jupyter", "ipykernel",
       "streamlit>=1.20", "pytest"]

[project.urls]
Homepage = "https://github.com/stillwater-sc/mp-dsp-python"
Repository = "https://github.com/stillwater-sc/mp-dsp-python"
Issues = "https://github.com/stillwater-sc/mp-dsp-python/issues"
Documentation = "https://github.com/stillwater-sc/mixed-precision-dsp"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/mpdsp"]
wheel.install-dir = "mpdsp"

# Single source of truth for the package version: read it from the
# `project(mp-dsp-python VERSION X.Y.Z)` line in CMakeLists.txt. This
# keeps Python wheel metadata, the C++ CMake target, and any
# downstream CMake consumers in lockstep automatically.
#
# `result` templates the captured X.Y.Z with an optional PEP 440
# post-release suffix. CMake's project(VERSION) doesn't accept
# `.postN`, so post-releases live in the `result` template here rather
# than in CMakeLists.txt. When upstream mixed-precision-dsp bumps
# (tracked via `project(VERSION ...)` and MPDSP_DSP_PIN), reset this
# to `"{value}"` so the wheel version matches the new upstream triple.
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = '(?i)project\s*\(\s*mp-dsp-python[^)]*VERSION\s+(?P<value>[0-9]+\.[0-9]+\.[0-9]+)'
result = "{value}.post2"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
